@@ -9,30 +9,37 @@ class FeynMLReader:
        """Read feynML from file."""
 
        self.root = elementtree.parse(filename).getroot()
-       self.dict = {}
+       self.diagrams = []
+       self.dicts = []
+       if self.root.tag != "feynml":
+          raise "feynML Error: <feynml> must be root element"%self.root.tag
+       for element in self.root:
+          if element.tag == "head":
+             pass # ignor header for now
+          elif element.tag == "diagram":
+             self.diagrams.append(element)
+             self.dicts.append({})
 
-   def get_graph(self):
-       """Return the Feynman diagram represented by file contents."""
+   def get_diagram(self,n):
+       """Return the nth Feynman diagram represented by file contents."""
 
        fd = feyn.FeynDiagram()
-       if self.root.tag != "graph":
-          raise "feynML Error: <%>, not <graph>, as root element"%self.root.tag
-       for element in self.root:
-           if element.tag == "head":
-              pass
-           elif element.tag == "line":
-              fd.add( self.get_line(element) )
+       thediagram = self.diagrams[n]
+       thedict = self.dicts[n]
+       for element in thediagram:
+           if element.tag == "propagator":
+              fd.add( self.get_line(element,thedict) )
            elif element.tag == "vertex":
-              fd.add( self.get_vertex(element) )
+              fd.add( self.get_vertex(element,thedict) )
            elif element.tag == "leg":
-              fd.add( self.get_leg(element) )
+              fd.add( self.get_leg(element,thedict) )
            elif element.tag == "blob":
-              fd.add( self.get_blob(element) )
+              fd.add( self.get_blob(element,thedict) )
            else:
-              raise "feynML Error: invalid tag <%s> in <graph>"%element.tag
+              raise "feynML Error: invalid tag <%s> in <diagram>"%element.tag
        return fd
 
-   def get_vertex(self,element):
+   def get_vertex(self,element,thedict):
        """Build a vertex from its feynML representation."""
 
        try:
@@ -41,41 +48,39 @@ class FeynMLReader:
        except:
           raise "feynML Error: invalid attribute for <vertex> element"
        v = feyn.Point(x,y)
-       self.dict[element.attrib["id"]] = v
+       thedict[element.attrib["id"]] = v
        return v
 
-   def get_line(self,element):
+   def get_line(self,element,thedict):
        """Build a line from its feynML representation."""
 
        try:
           type = element.attrib["type"]
-          p1 = self.dict[element.attrib["source"]]
-          p2 = self.dict[element.attrib["target"]]
+          p1 = thedict[element.attrib["source"]]
+          p2 = thedict[element.attrib["target"]]
        except:
-          raise "feynML Error: invalid attribute for <line> element"
+          raise "feynML Error: invalid attribute for <propagator> element"
        l = feyn.NamedLine[type](p1,p2)
-       for subelement in element:
-          if subelement.tag == "layout":
-             for subsubelement in subelement:
-                l = self.apply_layout(subsubelement,l)
-       self.dict[element.attrib["id"]] = l
+       if "bend" in element.attrib:
+          l.bend(float(element.attrib["bend"]))
+       thedict[element.attrib["id"]] = l
        return l
 
-   def get_leg(self,element):
+   def get_leg(self,element,thedict):
        """Build a leg from its feynML representation."""
 
        try:
           type = element.attrib["type"]
           x = float(element.attrib["x"])
           y = float(element.attrib["y"])
-          p2 = self.dict[element.attrib["target"]]
+          p2 = thedict[element.attrib["target"]]
        except:
           raise "feynML Error: invalid attribute for <leg> element"
        l = feyn.NamedLine[type](feyn.Point(x,y),p2)
-       self.dict[element.attrib["id"]] = l
+       thedict[element.attrib["id"]] = l
        return l
 
-   def get_blob(self,element):
+   def get_blob(self,element,thedict):
        """Build a blob from its feynML representation."""
 
        try:
@@ -85,28 +90,20 @@ class FeynMLReader:
        except:
           raise "feynML Error: invalid attribute for <blob> element"
        b = feyn.NamedBlob[shape](x,y,0.5)
-       self.dict[element.attrib["id"]] = b
+       thedict[element.attrib["id"]] = b
        return b
 
-   def apply_layout(self,element,object):
-       """Apply the decorator encoded in a layout tag to a diagram object."""
+   def apply_layout(self,stylestring,object):
+       """Apply the decorators encoded in a style string to an object."""
 
-       try:
-          if element.tag == "arcthru" and isinstance(object,feyn.Line):
-             x = float(element.attrib["x"])
-             y = float(element.attrib["y"])
-             return object.arcThru(feyn.Point(x,y))
-          elif element.tag == "label":
-             return object
-          else:
-             raise "feynML Error: invalid tag inside <layout> element"
-       except:
-          raise "feynML Error while parsing <layout> element"
+       styleelements = stylestring.split(";")
+       for styling in styleelements:
+           pass 
 
 
 if __name__=="__main__":
    x = FeynMLReader("test.feynml")
-   f = x.get_graph()
+   f = x.get_diagram(0)
    c = pyx.canvas.canvas()
    f.draw(c)
    c.writeEPSfile("thetest-2")
